# simple_geant4_package

./: .gitignore  CMakeLists.txt  LICENSE  README.md  doSimu.cc
external_macros/: CMakeLists.txt  run_geant4.cc
include/: Constants.hh  PrimaryGenerator.hh  RootTree.hh  TOFSD.hh
src/: DetConstruction.cc  EventAction.cc  GlobalVars.cc  PrimaryGenerator.cc  StandardDetectorSD.cc  TOFSD.cc
